--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Shotcrete Calc – Cálculo Rápido, Registro y Resumen</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- PWA (GitHub Pages: usar rutas relativas) -->
-  ./manifest.json
+  <!-- PWA (GitHub Pages: rutas relativas) -->
+  <link rel="manifest" href="./manifest.json">
   <meta name="theme-color" content="#f97316">
 
   <style>
@@ -220,7 +220,6 @@
             <button class="btn" id="add_res">Agregar resane</button>
             <button class="btn ghost" id="clear_res">Limpiar resanes</button>
           </div>
-          <div class="note">Cada resane usa sus propios L (m) y H (m). Se calcula: m³ = (L × H) / 11.5.</div>
         </div>
 
         <div class="col-12 row" style="margin-top:6px">
@@ -287,7 +286,6 @@
             <button class="btn" id="add_res_r">Agregar resane</button>
             <button class="btn ghost" id="clear_res_r">Limpiar resanes</button>
           </div>
-          <div class="note">m³ resane = (L × H) / 11.5 (sin factor).</div>
         </div>
 
         <div class="col-12 row" style="margin-top:6px">
@@ -342,10 +340,14 @@
 
   <script>
     const fmt = (x, d=3) => Number(x).toFixed(d);
-    const getNum = (id, def=0) => { const el = document.getElementById(id); if (!el) return def; const v = el.value.replace(',', '.'); return v === "" || isNaN(Number(v)) ? def : Number(v); };
+    const getNum = (id, def=0) => {
+      const el = document.getElementById(id); if (!el) return def;
+      const v = el.value.replace(',', '.');
+      return v === "" || isNaN(Number(v)) ? def : Number(v);
+    };
     const getStr = id => (document.getElementById(id)?.value || "").trim();
 
-    /* Lógica de cálculo */
+    /* Lógica de cálculo (sin fórmulas visibles en UI) */
     function calcArcoNuevo(A, H, L, k, R){
       if (A<=0||H<=0||L<=0||R<=0||k<=0) return 0;
       return (((2*H)+A)*k*L)/R;
@@ -428,7 +430,7 @@
 
       const total=m3_arco+m3_fs+m3_res;
 
-      /* Resumen compacto (sin fórmulas) */
+      /* Resumen compacto */
       const banner=document.getElementById('banner'); const nums=document.getElementById('numbers');
       banner.style.display='block';
       nums.textContent=`Arco: ${fmt(m3_arco)} | FS: ${fmt(m3_fs)} | Resanes: ${fmt(m3_res)} | Total: ${fmt(total)}`;
@@ -587,3 +589,4 @@
   </script>
 </body>
 </html>
+
