--- a/index.html
+++ b/index.html
@@ -153,7 +153,10 @@
 <body>
   <div class="wrap">
     <h1>Shotcrete Calc</h1>
-    <div class="subtitle">Calculadora de m³, registro y resumen — interfaz amigable y clara.</div>
+    <div class="subtitle">
+      Calculadora de m³, registro y resumen — interfaz amigable y clara.
+      <br><span class="note">Versión de la app: <strong>2025.12.29-2</strong></span>
+    </div>
 
     <!-- Tabs -->
     <div class="tabs">
@@ -589,4 +592,3 @@
   </script>
 </body>
 </html>
-
